--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="about-me container">
 
       <div class="section-title">
-        <h2><?php  echo(\aaa); ?></h2>
+        <h2><?php  echo('aaaa'); ?></h2>
         <p>Learn more about me</p>
       </div>
 
